--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=9">
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <link rel="icon" type="image/png" href="/images/icon.png" />
-    <title>Music Player for Google Drive</title>
+    <title>Wakar music</title>
     <meta name="description" content="Music Player for Google Drive is a simple and lightweight online music player for your audio files stored in Google Drive. It lets you open music files directly from Google Drive or from its own interface. Music Player for Google Drive offers: Playback of MP3 files, MP4, OGG (Audio), WAV, ACC (iTune's .m4a files), webm (Audio). - Support for ID3 tags v1 and v2as well as AAC file Tags. - Automatic display of Album covers. - Handles users signed-in multiple Google account elegantly. - Open Audio files directly from the Google Drive UI." />
 
     <!-- Disable tap highlight on IE -->
